@@ -1,5 +1,6 @@
 Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
 David Tardon  <dtardon@redhat.com>
+Fridrich Štrba <fridrich.strba@bluewin.ch>
 Markus Mohrhard <markus.mohrhard@googlemail.com>
 Petr Mladek <pmladek@suse.cz>
 Caolán McNamara <caolanm@redhat.com>
